cabal-version: 2.4
name:          flappy-haskell
version:       0.1.0.0
synopsis:      Flappy Bird Haskell implementation
homepage:      http://phollow.fr
license:       MIT
license-file:  LICENSE
author:        Jérôme Mahuet
maintainer:    jerome.mahuet@gmail.com
category:      Game
build-type:    Simple

executable flappy-haskell
  main-is:          Main.hs
  other-modules:
    Audio
    Game
    Graphics
    Input
    Rendering
    Types

  build-depends:
    , base
    , linear
    , random
    , sdl2
    , sdl2-image
    , sdl2-mixer
    , StateVar
    , text
    , unordered-containers
    , Yampa

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
